--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,7 +28,10 @@
 }
 /* Hero text starts*/
 #hero-text {
-    padding: 13vw 0 13vw 19vw; 
+    padding-left: 19vw;
+    padding-right: 13vw;
+    padding-bottom: 0;  
+    opacity: 0;
 }
 #hero-text #tilt {
     transform: skew(-20deg);
@@ -483,3 +486,14 @@ a {
     }
 }
 /* css for mobile with screen width lower than 768px ends*/
+/* css for scrollToTop arrow/link starts */
+.scrollToTop {
+    width: 40px;
+    height: 40px;
+    background-image: url('../images/arrow.png');
+    position: fixed;
+    right:30px;
+    bottom:30px;
+    display:none;
+}
+/* css for scrollToTop arrow/link ends */
