--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,7 +28,10 @@
 }
 /* Hero text starts*/
 #hero-text {
-    padding: 13vw 0 13vw 19vw; 
+    padding-left: 19vw;
+    padding-right: 13vw;
+    padding-bottom: 0;  
+    opacity: 0;
 }
 #hero-text #tilt {
     transform: skew(-20deg);
@@ -483,3 +486,119 @@ a {
     }
 }
 /* css for mobile with screen width lower than 768px ends*/
+/* css for scrollToTop arrow/link starts */
+.scrollToTop {
+    width: 40px;
+    height: 40px;
+    background-image: url('../images/arrow.png');
+    position: fixed;
+    right:30px;
+    bottom:30px;
+    display:none;
+}
+/* css for scrollToTop arrow/link ends */
+
+/* Image gallery begins*/
+
+img {
+    vertical-align: middle;
+}
+  
+  /* Position the image container (needed to position the left and right arrows) */
+  .container {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #f1f1f1;
+    z-index: 9999999999999999999999;
+  }
+  
+  /* Hide the images by default */
+  .mySlides {
+    display: none;
+  }
+  
+  /* Add a pointer when hovering over the thumbnail images */
+  .cursor {
+    cursor: pointer;
+  }
+  
+  /* Next & previous buttons */
+  .prev,
+  .next {
+    cursor: pointer;
+    position: absolute;
+    top: 40%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover,
+  .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  .closegal {
+    color: #f2f2f2;
+    font-size: 25px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+  }
+  
+  /* Container for image text */
+  .caption-container {
+    text-align: center;
+    background-color: #222;
+    padding: 2px 16px;
+    color: white;
+  }
+  
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Six columns side by side */
+  .column {
+    float: left;
+    width: 16.66%;
+  }
+  
+  /* Add a transparency effect for thumnbail images */
+  .demo {
+    opacity: 0.4;
+  }
+  
+  .active,
+  .demo:hover {
+    opacity: 1;
+  }
+/* Image gallery ends */
