--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -324,7 +324,6 @@ img {
     bottom: 0;
     left: 0;
     right: 0;
-    margin: 0 10%;
     background: rgba(169,169,169,0.7);
   }
   /* Hide the images by default */
@@ -350,7 +349,7 @@ img {
     padding: 16px;
     margin-top: -50px;
     font-weight: bold;
-    font-size: 3vw;
+    font-size: 40px;
     border-radius: 0 3px 3px 0;
     user-select: none;
     -webkit-user-select: none;
@@ -371,15 +370,15 @@ img {
   /* Number text (1/3 etc) */
   .numbertext {
     color: #f2f2f2;
-    font-size: 1vw;
-    padding: 1vw 3vw;
+    font-size: 12px;
+    padding: 8px 12px;
     position: absolute;
     top: 0;
   }
   .closegal {
     color: #f2f2f2;
-    font-size: 2vw;
-    padding: 0.5vw 2vw;
+    font-size: 25px;
+    padding: 8px 12px;
     position: absolute;
     top: 0;
     right: 0;
@@ -416,63 +415,8 @@ img {
     opacity: 1;
   }
 /* Image gallery ends */
-@media screen and ( max-width: 800px ) {
-    .container .gallery {
-        margin: 25% 0;
-    }
-    .mySlides img {
-        min-height:60vh;
-        max-height:100vh;
-    }
-    .prev, .next {
-      font-size: 8vw;
-      top: 35vh;
-    } 
-    .closegal {
-        font-size: 5vw;
-        padding: 2vw;
-    }
-    .numbertext {
-        font-size: 3vw;
-        padding: 4vw 4vw;
-    }
-}
-@media screen and ( max-height: 370px ) {
-    .container .gallery {
-        margin: 0 25%;
-    }
-    .mySlides img {
-        min-height:100vh;
-        max-height:100vh;
-    }
-    .prev, .next {
-        font-size: 3vw;
-        top: 50vh;
-      } 
-    .closegal {
-        font-size: 2vw;
-        padding: 2vw;
-    }
-    .numbertext {
-        font-size: 1vw;
-        padding: 3vw 2vw;
-    }
-}
-@media screen and ( max-height: 660px )and ( max-width: 700px )  {
-    .container .gallery {
-        margin: 0 25%;
-    }
-    .mySlides img {
-        min-height:100vh;
-        max-height:100vh;
-    }
-    .prev, .next {
-        font-size: 3vw;
-        top: 60vh;
-      }
-}
 /* css for mobile with screen width lower than 768px starts*/
-@media screen and ( max-width: 768px ) {  
+@media screen and ( max-width: 768px ) {
     .fa-fs {
         font-size: 6vw;
         padding: 2vw;
