--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -324,6 +324,7 @@ img {
     bottom: 0;
     left: 0;
     right: 0;
+    margin: 10% 0;
     background: rgba(169,169,169,0.7);
   }
   /* Hide the images by default */
