--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -325,7 +325,10 @@ img {
     bottom: 0;
     left: 0;
     right: 0;
-    margin: 0 10%;
+    margin: 0px auto;
+    width:1100px; 
+    height:500px; 
+    text-align:center; 
     background: rgba(169,169,169,0.7);
   }
   /* Hide the images by default */
@@ -419,9 +422,6 @@ img {
 /* Image gallery ends */
 /* css for mobile with screen width lower than 768px starts*/
 @media screen and ( max-width: 768px ) {
-    .container .gallery {
-        margin: 10% 0;
-    }
     .fa-fs {
         font-size: 6vw;
         padding: 2vw;
