--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -326,8 +326,8 @@ img {
     left: 0;
     right: 0;
     margin: 0px auto;
-    width:1100px; 
-    height:500px; 
+    widows:50%;; 
+    height:50%; 
     background: rgba(169,169,169,0.7);
   }
   /* Hide the images by default */
